# flask-aws

./: .gitignore  config.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  enums.py  models.py  utility.py
app/blueprints/admin/: __init__.py  routes.py
app/blueprints/auth/: __init__.py  routes.py
app/blueprints/customer/: __init__.py  routes.py
app/blueprints/main/: __init__.py  routes.py
app/blueprints/professional/: __init__.py  routes.py
app/templates/: add_category.html  add_service.html  admin.html  admin_dashboard.html  base.html  base_registration.html  categories.html  customer_dashboard.html  customer_registration.html  customers_admin.html  get_professionals_of_service.html  home.html  login.html  professional_registration.html  professionals_admin.html  professionals_dashboard.html  rating.html  services.html  services_admin.html  update_customer.html  update_service.html
app/utils/: s3.py
